[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Grenade.gd" type="Script" id=1]
[ext_resource path="res://sounds/grenade/shoes raggety.wav" type="AudioStream" id=2]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 0.1

[sub_resource type="SphereShape" id=2]
radius = 0.1

[sub_resource type="SphereShape" id=3]
radius = 5.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 5.0
height = 10.0
radial_segments = 16
rings = 8

[sub_resource type="SphereMesh" id=11]
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8

[node name="Grenade" type="RigidBody"]
mass = 10.0
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Area" type="Area" parent="."]

[node name="BlastRadius" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="DebugMesh" type="MeshInstance" parent="Area"]
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 11 )
material/0 = null

[node name="TimerToDeletion" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Explosion" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_size = 10.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="TimerToDeletion" to="." method="_on_TimerToDeletion_timeout"]
